--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        // View binding allows efficient, type-safe view access
+        // See more at https://developer.android.com/topic/libraries/view-binding
+        viewBinding true
+    }
 }
 
 dependencies {
