--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,17 @@ dependencies {
     //glide
     def glide_version = "4.12.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    //Retrofit2
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+
+    //okhttp3 logging interceptor
+    def okhttp3_logging_version = "4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_logging_version"
+
+    implementation 'com.google.code.gson:gson:2.8.6'                    //gson
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'     //JSON Parsing
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'        //JSON Parsing
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'       //rx
 }
