--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'     //JSON Parsing
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'        //JSON Parsing
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'       //rx
+
+    //Rx
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
+    implementation 'com.jakewharton.rxbinding4:rxbinding-core:4.0.0'
+
+    //by viewModels
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
 }
