--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseAndroidApp" />
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/Theme.BaseAndroidApp" >
+
 
 </manifest>
