add : Activity 및 ViewModel, presentation data class 추가
- 목록 데이터를 가져와서 리사이클러에 표시하는 VodActivity
- 선택한 목록의 상세 데이터를 가져와서 표시하는 VodDetailActivity.kt
- 각각의 액티비티에 사용되는 viewModel과 view에 사용되는 데이터 가공을 위한 data class 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,23 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.BaseAndroidApp" >
+        android:theme="@style/Theme.BaseAndroidApp">
 
+        <activity
+            android:name=".core.presentation.VodActivity"
+            android:configChanges="keyboard|keyboardHidden|navigation"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".core.presentation.VodDetailActivity" />
+    </application>
 
 </manifest>
