--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,22 +1,21 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'kotlin-parcelize'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.baseandroidapp"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,14 +31,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        // View binding allows efficient, type-safe view access
-        // See more at https://developer.android.com/topic/libraries/view-binding
-        viewBinding true
-    }
-    dataBinding {
-        enabled = true
-    }
 }
 
 dependencies {
@@ -51,21 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation project(path: ':domain')
-    implementation project(path: ':data')
-    implementation project(path: ':presentation')
-
-    //glide
-    def glide_version = "4.12.0"
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    implementation "com.github.bumptech.glide:annotations:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
-
-
-    //by viewModels
-    implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
-
     //coroutines
     def coroutine_version = "1.6.0"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version")
@@ -74,5 +50,4 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-
 }
