--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.baseandroidapp">
 
+<!--    <uses-feature-->
+<!--        android:name="android.software.leanback"-->
+<!--        android:required="false" />-->
+<!--    <uses-feature-->
+<!--        android:name="android.hardware.touchscreen"-->
+<!--        android:required="false" />-->
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
 
     <application
         android:name=".AndroidApplication"
@@ -13,7 +22,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseAndroidApp">
+        android:theme="@style/Theme.BaseAndroidApp"
+        android:banner="@mipmap/ic_launcher">
 
         <activity
             android:name=".util.navigator.RouteActivity"
@@ -23,6 +33,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <activity
@@ -33,7 +48,21 @@
             android:configChanges="keyboard|keyboardHidden|navigation"
             android:exported="true" />
         <activity android:name=".vod.VodDetailActivity" />
-        <activity android:name=".sample.motionlayout.YoutubeCloneActivity"/>
+        <activity android:name=".sample.motionlayout.YoutubeCloneActivity" />
+        <activity android:name=".sample.notification.NotificationActivity" />
+        <activity android:name=".sample.exoplayer.ExoplayerActivity" />
+
+
+        <service
+            android:name=".sample.notification.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.google.firebase.messaging.default_notification_channel_id"
+                android:value="@string/default_notification_channel_id" />
+        </service>
     </application>
 
 </manifest>
