--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.baseandroidapp">
 
-<!--    <uses-feature-->
-<!--        android:name="android.software.leanback"-->
-<!--        android:required="false" />-->
-<!--    <uses-feature-->
-<!--        android:name="android.hardware.touchscreen"-->
-<!--        android:required="false" />-->
+    <!--    <uses-feature-->
+    <!--        android:name="android.software.leanback"-->
+    <!--        android:required="false" />-->
+    <!--    <uses-feature-->
+    <!--        android:name="android.hardware.touchscreen"-->
+    <!--        android:required="false" />-->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
-
     <application
         android:name=".AndroidApplication"
         android:allowBackup="true"
+        android:banner="@mipmap/ic_launcher"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseAndroidApp"
-        android:banner="@mipmap/ic_launcher">
+        android:theme="@style/Theme.BaseAndroidApp">
 
         <activity
             android:name=".util.navigator.RouteActivity"
-            android:exported="true">
+            android:exported="true"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!--                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
 
         <activity
@@ -51,6 +52,12 @@
         <activity android:name=".sample.motionlayout.YoutubeCloneActivity" />
         <activity android:name=".sample.notification.NotificationActivity" />
         <activity android:name=".sample.exoplayer.ExoplayerActivity" />
+        <activity
+            android:name=".sample.pip.PipActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:supportsPictureInPicture="true"
+            android:launchMode="singleTask"
+            tools:targetApi="n" />
 
 
         <service
