--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".feature.login.LoginActivity" />
         <activity android:name=".feature.setting.SettingsActivity" />
         <activity android:name=".feature.insert.InsertTableActivity" />
         <activity android:name=".feature.grid.GridActivity" />
