--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,12 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
     api 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "com.jakewharton.rxrelay2:rxrelay:2.1.0"
+
+    //logging
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
