--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,11 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
 
     //retrofit2
-    api 'com.squareup.retrofit2:retrofit:2.9.0'
-    api 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
-    api 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     // RxJava
     implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
